--- a/persuasion-service/src/main/resources/application.properties
+++ b/persuasion-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=persuasion-service
 server.port=8083
-google.api.key=AIzaSyCOZW_lL8XtMEfeprrs1Lxkjpd37yDaycY
+google.api.key=${GOOGLE_API_KEY}
 google.project.id=feisty-dolphin-470312-s3
 google.location=us-central1
